--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "bin": "./cjs/bin/"
     },
     "main": "./cjs/index.js",
+    "bundledDependencies": [],
     "scripts": {
         "build": "npx tsc --pretty --project tsconfig.json",
         "watch": "npx tsc --watch --pretty --project tsconfig.json"
@@ -21,42 +22,35 @@
         "epi-sync-models": "cjs/bin/epi_sync_models.js"
     },
     "devDependencies": {
-        "@episerver/spa-core": "github:episerver/foundation-lib-spa-core#semver:0.1.3",
-        "@reduxjs/toolkit": "^1.5.0",
-        "@types/glob": "^7.1.3",
-        "@types/loader-utils": "^2.0.1",
-        "@types/node": "^15.0.3",
-        "@types/yargs": "^16.0.1",
-        "axios": "^0.21.1",
-        "dotenv": "10.0.0",
-        "dotenv-expand": "^5.1.0",
-        "esm": "^3.2.25",
-        "eventemitter3": "^4.0.7",
+        "@episerver/spa-core": "https://github.com/andrerim/foundation-lib-spa-core.git#update-ts-and-fix-type-errors",
+        "@types/glob": "^8.1.0",
+        "@types/loader-utils": "^2.0.6",
+        "@types/node": "^20.14.2",
+        "@types/yargs": "^17.0.32",
+        "axios": "^1.7.2",
+        "dotenv": "16.4.5",
+        "dotenv-expand": "^11.0.6",
+        "esm-wallaby": "^3.2.30",
+        "eventemitter3": "^5.0.1",
         "form-data": "^4.0.0",
-        "glob": "^7.1.4",
-        "loader-utils": "^2.0.0",
-        "lodash": "^4.17.20",
-        "react": "^17.0.1",
-        "react-dom": "^17.0.1",
-        "react-helmet": "^6.1.0",
-        "react-redux": "^7.2.2",
-        "react-router": "^5.2.0",
-        "react-router-dom": "^5.2.0",
-        "schema-utils": "^3.0.0",
-        "typescript": "^4.1.3",
-        "uuid": "^8.3.2",
-        "webpack": "^5.15.0",
-        "yargs": "17.0.1"
+        "glob": "^10.4.1",
+        "loader-utils": "^3.3.0",
+        "lodash": "^4.17.21",
+        "schema-utils": "^4.2.0",
+        "typescript": "^5.4.5",
+        "uuid": "^9.0.1",
+        "webpack": "^5.91.0",
+        "yargs": "17.7.2"
     },
     "peerDependencies": {
-        "@episerver/spa-core": "github:episerver/foundation-lib-spa-core#semver:^0.1.2",
-        "dotenv": "^10.0.0",
-        "dotenv-expand": "^5.1.0",
-        "esm": "^3.2.25",
+        "@episerver/spa-core": "https://github.com/andrerim/foundation-lib-spa-core.git#update-ts-and-fix-type-errors",
+        "dotenv": "^16.4.5",
+        "dotenv-expand": "^11.0.6",
+        "esm-wallaby": "^3.2.30",
         "form-data": "^4.0.0",
-        "glob": "^7.1.4",
-        "loader-utils": "^2.0.0",
-        "schema-utils": "^3.0.0",
-        "yargs": "^17.0.1"
+        "glob": "^10.4.1",
+        "loader-utils": "^3.3.0",
+        "schema-utils": "^4.2.0",
+        "yargs": "^17.7.2"
     }
 }
